--- a/package.json
+++ b/package.json
@@ -1,6 +1,8 @@
 {
-  "name": "Kibby",
+  "name": "kibby",
   "version": "1.0.0",
+  "main": "src/index.js",
+  "type": "module",
   "dependencies": {
     "firebase": "^10.6.0"
   }
