Stand: test-Stand Safe Speicherung (2)

--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "kibby",
   "version": "1.0.0",
-  "main": "src/index.js",
+  "main": "public/index.js",
   "type": "module",
   "dependencies": {
     "firebase": "^10.6.0"
